--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "better-sqlite3": "^11.7.0",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mssql": "^12.0.0",
     "node-telegram-bot-api": "^0.66.0",
     "nodemon": "^3.1.10",
     "puppeteer": "^24.23.0"
