refactor: remove deprecated browser session management from SessionManager
refactor: remove unused order-related methods from UserService

chore: delete unused encryption utility

test: remove obsolete Puppeteer test script

feat: implement DailyRenewalService for automatic subscription renewals

feat: add TransactionVerificationService for verifying Razer transactions

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Environment variables (contains sensitive data)
 .env
 
+# Test file with sensitive data
+lol.txt
+
 # SQLite Database (contains user data)
 data/
 *.db
