--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "description": "",
   "dependencies": {
     "dotenv": "^17.2.3",
+    "ethers": "^6.16.0",
     "mssql": "^12.0.0",
     "node-telegram-bot-api": "^0.66.0",
     "nodemon": "^3.1.10",
-    "puppeteer": "^24.23.0"
+    "puppeteer": "^24.23.0",
+    "tronweb": "^6.1.1"
   },
   "devDependencies": {
     "cross-env": "^10.1.0"
