Refactor logging: Replace console statements with a structured logger
- Introduced a new Logger service to handle logging across the application.
- Updated RazerScraperService to use the logger for HTTP requests, info, success, and error messages.
- Modified SessionManager to log session activities with appropriate log levels.
- Enhanced TransactionVerificationService to utilize the logger for transaction status and errors.
- Implemented logging in EncryptionService for encryption and decryption errors.
- Created a comprehensive logger utility with various log levels and formatting options.

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,12 @@
-# Telegram Bot Token (Required)
-TELEGRAM_TEST_BOT_TOKEN=your_telegram_bot_token_here
+NODE_ENV=production
+TELEGRAM_BOT_TOKEN=your_production_bot_token_here
+TELEGRAM_TEST_BOT_TOKEN=your_test_bot_token_here
+AUTHORIZED_USER_IDS=123456789,987654321
+DB_CONNECTION_STRING=Server=your_server.database.net; Database=your_database_name; User Id=your_username; Password=your_password; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;
+TEST_DB_CONNECTION_STRING=Server=your_server.database.net; Database=your_database_name; User Id=your_username; Password=your_password; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;
+ENCRYPTION_KEY=your_64_character_hex_encryption_key_here_replace_this_with_random
+PORT=3000
 
-# Database Connection Options:
-# Option 1: Use Connection String (Recommended for complex configurations)
-# DB_CONNECTION_STRING=Server=KHALEDROKAYA\RazerBuyer;Database=RazerBuyer;Trusted_Connection=yes;TrustServerCertificate=true;
-
-# Option 2: Use Individual Parameters (Default - for Named Instances with Windows Auth)
-DB_SERVER=KHALEDROKAYA\RazerBuyer
-DB_NAME=RazerBuyer
-
-# Notes:
-# - For named instances (like KHALEDROKAYA\RazerBuyer), use backslash
-# - Windows Authentication is used by default (no username/password needed)
-# - If you get connection errors, try the connection string format (Option 1)
+# Logger Configuration
+LOG_TO_FILE=false
+# Set to 'true' to enable logging to logs/app.log file
