--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ data/
 *.db
 *.db-shm
 *.db-wal
+*.sql
 
 # Database backups
 backups/
@@ -19,6 +20,7 @@ node_modules/
 package-lock.json
 
 # Logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
