--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.3",
     "ethers": "^6.16.0",
     "mssql": "^12.0.0",
+    "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.66.0",
     "nodemon": "^3.1.10",
     "puppeteer": "^24.23.0",
